fix. hide scrollbar

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -49,6 +49,9 @@
   --height: auto;
     width: 100%;
     .ion-page {
+      width: min(56.25vh, 100%);
+      margin-left: auto;
+      margin-right: auto;
       position: relative;
       contain: content;
       max-height: var(--max-modal-height, 80vh);
@@ -62,9 +65,6 @@
   display: flex;
   flex-direction: column;
   max-height: 80vh;
-  width: min(56.25vh, 100%);
-  margin-left: auto;
-  margin-right: auto;
 }
 
 // --
@@ -75,4 +75,16 @@
 .comment-list-modal {
   @extend .auto-height;
   @extend .standard-modal-code;
+}
+
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ *::-webkit-scrollbar{
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+*{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
